# libstemmer

./: .CMakeLists.txt.swp  CMakeLists.txt  minimal_stemmer.c
